# airport-app-claude-version-

./: .env.example  .gitignore  AGENTS.md  README.md  airlabs.py  app.py  pyproject.toml
static/: style.css
templates/: _status.html  airline.html  airport.html  base.html  delays.html  error.html  flight.html  index.html  nearby.html  routes.html  schedules.html
tests/: conftest.py  test_airlabs.py  test_routes.py
