[project]
name = "airport-app"
version = "0.1.0"
description = "Flask web app for live airport / flight / schedule queries via AirLabs"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
